--- a/index.html
+++ b/index.html
@@ -1,73 +1,78 @@
-<!-- Save as index.html -->
+<!-- Instructions:
+1. Save this file as index.html
+2. Open it in a browser or host it on GitHub Pages
+3. Login using: Username = Sarkar, Password = Sarkar
+-->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DeadMC Panel</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login - Sarkar Panel</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #1a1a1a;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .login-box {
+      background-color: #2c2c2c;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px black;
+      width: 300px;
+    }
+    input[type="text"], input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      border: none;
+      border-radius: 8px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #00aa00;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .error {
+      color: red;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div id="login" class="hidden bg-white p-6 rounded-2xl shadow-lg w-full max-w-sm text-center">
-    <h2 class="text-xl font-bold mb-2">Login Required</h2>
-    <p>Use a valid link with access token.</p>
-  </div>
-
-  <div id="panel" class="hidden bg-white p-6 rounded-2xl shadow-lg w-full max-w-md text-center">
-    <h1 class="text-2xl font-bold mb-4">DeadMC Panel</h1>
-
-    <!-- Server Info -->
-    <div class="mb-4">
-      <p><strong>Status:</strong> <span id="status" class="text-red-500">Offline</span></p>
-      <p><strong>IP:</strong> play.deadmc.fun</p>
-      <p><strong>Version:</strong> 1.18.2 - 1.21.5</p>
-    </div>
-
-    <!-- Buttons -->
-    <div class="space-x-2">
-      <button onclick="startServer()" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-xl">Start</button>
-      <button onclick="stopServer()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-xl">Stop</button>
-      <button onclick="restartServer()" class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded-xl">Restart</button>
-    </div>
-
-    <p id="msg" class="mt-4 text-sm text-gray-500"></p>
+<body>
+  <div class="login-box">
+    <h2>Login Panel</h2>
+    <div id="errorMsg" class="error"></div>
+    <input type="text" id="username" placeholder="Username" autocomplete="off" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Login</button>
   </div>
 
   <script>
-    // ⛔ Step 1: Token check in URL
-    const url = new URL(window.location.href);
-    const token = url.searchParams.get("user");
+    function login() {
+      const user = document.getElementById("username").value;
+      const pass = document.getElementById("password").value;
+      const error = document.getElementById("errorMsg");
 
-    // ✅ Step 2: List of valid users (later: backend token check)
-    const validUsers = ["abc123", "deadmc", "admin", "test"];
-
-    if (validUsers.includes(token)) {
-      document.getElementById("panel").classList.remove("hidden");
-      localStorage.setItem("authed", "yes");
-    } else if (localStorage.getItem("authed") === "yes") {
-      document.getElementById("panel").classList.remove("hidden");
-    } else {
-      document.getElementById("login").classList.remove("hidden");
-    }
-
-    // Buttons
-    function startServer() {
-      document.getElementById("msg").innerText = "⏳ Starting server...";
-      document.getElementById("status").innerText = "Starting...";
-      document.getElementById("status").className = "text-yellow-500";
-    }
-
-    function stopServer() {
-      document.getElementById("msg").innerText = "🛑 Stopping server...";
-      document.getElementById("status").innerText = "Stopping...";
-      document.getElementById("status").className = "text-red-500";
-    }
-
-    function restartServer() {
-      document.getElementById("msg").innerText = "🔁 Restarting server...";
-      document.getElementById("status").innerText = "Restarting...";
-      document.getElementById("status").className = "text-blue-500";
+      if (user === "Sarkar" && pass === "Sarkar") {
+        window.location.href = "panel.html"; // Redirect after login
+      } else {
+        error.textContent = "❌ Invalid username or password!";
+      }
     }
   </script>
 </body>
