--- a/index.html
+++ b/index.html
@@ -1,79 +1,288 @@
-<!-- Instructions:
-1. Save this file as index.html
-2. Open it in a browser or host it on GitHub Pages
-3. Login using: Username = Sarkar, Password = Sarkar
--->
-
+<!-- USE THIS FILE AS index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - Sarkar Panel</title>
+  <meta charset="UTF-8">
+  <title>Aternos Style Panel</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #1a1a1a;
-      color: white;
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: sans-serif; }
+    body { background-color: #f4f4f4; }
+
+    /* LOGIN PAGE */
+    #login {
+      width: 100%;
+      height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      margin: 0;
     }
+
     .login-box {
-      background-color: #2c2c2c;
+      background: white;
       padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px black;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       width: 300px;
     }
-    input[type="text"], input[type="password"] {
+
+    .login-box input {
+      display: block;
       width: 100%;
       padding: 10px;
       margin-top: 10px;
       margin-bottom: 20px;
-      border: none;
-      border-radius: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
-    button {
+
+    .login-box button {
       width: 100%;
       padding: 10px;
-      background-color: #00aa00;
-      border: none;
-      border-radius: 8px;
+      background: #4caf50;
       color: white;
-      font-weight: bold;
+      border: none;
+      border-radius: 4px;
       cursor: pointer;
     }
-    .error {
-      color: red;
-      margin-bottom: 10px;
+
+    #loginError { color: red; text-align: center; }
+
+    /* PANEL PAGE */
+    #panel { display: none; height: 100vh; display: flex; }
+
+    .sidebar {
+      width: 200px;
+      background-color: #2d2d2d;
+      color: white;
+      padding-top: 20px;
     }
+
+    .sidebar div {
+      padding: 15px 20px;
+      cursor: pointer;
+    }
+
+    .sidebar div:hover {
+      background-color: #444;
+    }
+
+    .content {
+      flex-grow: 1;
+      padding: 30px;
+      overflow-y: auto;
+    }
+
+    .tab-content { display: none; }
+    .tab-content.active { display: block; }
+
+    button.control-btn {
+      margin: 5px;
+      padding: 10px 20px;
+      border: none;
+      background: #4caf50;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button.control-btn:hover { background: #3e8e41; }
+
+    /* PLAYER TAB */
+    .player-buttons button {
+      width: 100%;
+      padding: 15px;
+      font-size: 16px;
+      margin: 5px 0;
+      border: none;
+      color: white;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    .blue-btn { background-color: #2196F3; }
+    .red-btn { background-color: #f44336; }
+
+    .offline-player {
+      background-color: #1e2a38;
+      color: white;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+      border-radius: 4px;
+      justify-content: space-between;
+    }
+
+    .offline-player img {
+      width: 32px;
+      height: 32px;
+      margin-right: 10px;
+    }
+
+    #opInput {
+      margin-top: 10px;
+      width: 100%;
+      padding: 8px;
+    }
+
+    #banList {
+      margin-top: 10px;
+      font-style: italic;
+    }
+
+    #worldUpload {
+      margin-top: 15px;
+    }
+
+    .hidden { display: none; }
   </style>
 </head>
 <body>
+
+<!-- LOGIN -->
+<div id="login">
   <div class="login-box">
-    <h2>Login Panel</h2>
-    <div id="errorMsg" class="error"></div>
-    <input type="text" id="username" placeholder="Username" autocomplete="off" />
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="login()">Login</button>
+    <h2 style="text-align:center;">Login Panel</h2>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="checkLogin()">Login</button>
+    <p id="loginError"></p>
   </div>
+</div>
 
-  <script>
-    function login() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-      const error = document.getElementById("errorMsg");
+<!-- PANEL -->
+<div id="panel">
+  <div class="sidebar">
+    <div onclick="showTab('control')">Control</div>
+    <div onclick="showTab('software')">Software</div>
+    <div onclick="showTab('plugin')">Plugin</div>
+    <div onclick="showTab('world')">World</div>
+    <div onclick="showTab('player')">Player</div>
+  </div>
+  <div class="content">
+    
+    <!-- CONTROL -->
+    <div id="control" class="tab-content active">
+      <h2>Server Control</h2>
+      <button class="control-btn" onclick="setServerStatus('on')">Start</button>
+      <button class="control-btn" onclick="setServerStatus('off')">Stop</button>
+      <button class="control-btn">Restart</button>
+      <p id="serverStatus" style="margin-top: 10px;"><strong>Status:</strong> OFF</p>
+    </div>
 
-      if (user === "Sarkar" && pass === "Sarkar") {
-        window.location.href = "panel.html"; // Redirect after login
-      } else {
-        error.textContent = "❌ Invalid username or password!";
-      }
+    <!-- SOFTWARE -->
+    <div id="software" class="tab-content">
+      <h2>Software</h2>
+      <p>Click below to download PaperMC:</p>
+      <button class="control-btn" onclick="window.open('https://papermc.io/downloads', '_blank')">Download PaperMC</button>
+    </div>
+
+    <!-- PLUGIN -->
+    <div id="plugin" class="tab-content">
+      <h2>Plugin</h2>
+      <p>Plugin manager UI coming soon...</p>
+    </div>
+
+    <!-- WORLD -->
+    <div id="world" class="tab-content">
+      <h2>World</h2>
+      <div id="worldUpload">
+        <p id="worldMsg">Server is OFF. Please turn it ON to upload a world.</p>
+        <input type="file" id="worldFile" class="hidden">
+        <button id="uploadBtn" class="control-btn hidden">Upload World</button>
+      </div>
+    </div>
+
+    <!-- PLAYER -->
+    <div id="player" class="tab-content">
+      <h2>Players</h2>
+      <div class="player-buttons">
+        <button class="blue-btn">✅ Whitelist</button>
+        <button class="blue-btn">👑 OPs</button>
+        <input type="text" id="opInput" placeholder="Enter username for OP">
+        <button class="blue-btn" onclick="addOp()">Add OP</button>
+        <button class="red-btn">🚫 Banned Players</button>
+        <div id="banList">No banned players.</div>
+        <button class="red-btn">🚫 Banned IPs</button>
+      </div>
+
+      <h3 style="margin-top:20px;">Offline Players</h3>
+      <div class="offline-player">
+        <div><img src="https://mc-heads.net/avatar/Steve" alt=""> DEAD</div>
+        <div>➡️</div>
+      </div>
+      <div class="offline-player">
+        <div><img src="https://mc-heads.net/avatar/Steve" alt=""> Kashish</div>
+        <div>➡️</div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- SCRIPT -->
+<script>
+  let serverOn = false;
+  let ops = [];
+  let bannedPlayers = [];
+
+  function checkLogin() {
+    const user = document.getElementById('username').value;
+    const pass = document.getElementById('password').value;
+    if (user === 'Sarkar' && pass === 'Sarkar') {
+      document.getElementById('login').style.display = 'none';
+      document.getElementById('panel').style.display = 'flex';
+    } else {
+      document.getElementById('loginError').innerText = "Invalid username or password.";
     }
-  </script>
+  }
+
+  function showTab(tabId) {
+    const tabs = document.querySelectorAll('.tab-content');
+    tabs.forEach(t => t.classList.remove('active'));
+    document.getElementById(tabId).classList.add('active');
+
+    if (tabId === 'world') updateWorldTab();
+    if (tabId === 'player') updatePlayerTab();
+  }
+
+  function setServerStatus(status) {
+    serverOn = (status === 'on');
+    document.getElementById('serverStatus').innerHTML = `<strong>Status:</strong> ${serverOn ? 'ON' : 'OFF'}`;
+    updateWorldTab();
+  }
+
+  function updateWorldTab() {
+    const msg = document.getElementById('worldMsg');
+    const file = document.getElementById('worldFile');
+    const btn = document.getElementById('uploadBtn');
+
+    if (serverOn) {
+      msg.innerText = "Upload your world file:";
+      file.classList.remove('hidden');
+      btn.classList.remove('hidden');
+    } else {
+      msg.innerText = "Server is OFF. Please turn it ON to upload a world.";
+      file.classList.add('hidden');
+      btn.classList.add('hidden');
+    }
+  }
+
+  function addOp() {
+    const input = document.getElementById('opInput');
+    const name = input.value.trim();
+    if (name && !ops.includes(name)) {
+      ops.push(name);
+      alert(`${name} is now OP!`);
+      input.value = "";
+    }
+  }
+
+  function updatePlayerTab() {
+    const banList = document.getElementById('banList');
+    banList.innerText = bannedPlayers.length > 0 ? bannedPlayers.join(", ") : "No banned players.";
+  }
+</script>
+
 </body>
 </html>
