--- a/index.html
+++ b/index.html
@@ -1,189 +1,189 @@
-<!-- USE THIS FILE AS index.html --><!-- Updated Plugin Tab with File Upload --><!DOCTYPE html><html lang="en">
+<!-- Final version - Save as index.html and host it -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Aternos Style Panel</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Minecraft Server Panel</title>
   <style>
-    /* [Same styles as above, unchanged] */
-    .plugin-file {
-      margin-top: 10px;
+    body {
+      font-family: Arial;
+      background: #121212;
+      color: white;
+      margin: 0;
+      padding: 0;
+    }
+    .login, .panel {
+      display: none;
+      max-width: 400px;
+      margin: 100px auto;
+      padding: 30px;
+      background: #1e1e1e;
+      border-radius: 10px;
+    }
+    .login input {
+      width: 100%;
       padding: 10px;
-      background: #eee;
-      border-radius: 4px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+    }
+    .tabs {
+      display: flex;
+      background: #1e1e1e;
+    }
+    .tabs button {
+      flex: 1;
+      background: #2a2a2a;
+      border: none;
+      padding: 15px;
+      cursor: pointer;
+      color: white;
+    }
+    .tabs button.active {
+      background: #3f3f3f;
+    }
+    .tab-content {
+      display: none;
+      padding: 20px;
+    }
+    .tab-content.active {
+      display: block;
+    }
+    .panel input[type="file"], .panel input[type="text"] {
+      margin: 10px 0;
+    }
+    .op-section, .ban-section {
+      margin-top: 10px;
+    }
+    .btn {
+      background: #4caf50;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-left: 5px;
+    }
+    .server-status {
+      margin-top: 10px;
     }
   </style>
 </head>
-<body><!-- LOGIN --><div id="login">
-  <div class="login-box">
-    <h2 style="text-align:center;">Login Panel</h2>
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="checkLogin()">Login</button>
-    <p id="loginError"></p>
-  </div>
-</div><!-- PANEL --><div id="panel">
-  <div class="sidebar">
-    <div onclick="showTab('control')">Control</div>
-    <div onclick="showTab('software')">Software</div>
-    <div onclick="showTab('plugin')">Plugin</div>
-    <div onclick="showTab('world')">World</div>
-    <div onclick="showTab('player')">Player</div>
-  </div>
-  <div class="content"><!-- CONTROL -->
-<div id="control" class="tab-content active">
-  <h2>Server Control</h2>
-  <button class="control-btn" onclick="setServerStatus('on')">Start</button>
-  <button class="control-btn" onclick="setServerStatus('off')">Stop</button>
-  <button class="control-btn">Restart</button>
-  <p id="serverStatus" style="margin-top: 10px;"><strong>Status:</strong> OFF</p>
+<body>
+
+<div class="login" id="loginBox">
+  <h2>Login Panel</h2>
+  <input type="text" id="username" placeholder="Username"/>
+  <input type="password" id="password" placeholder="Password"/>
+  <button onclick="login()" class="btn">Login</button>
 </div>
 
-<!-- SOFTWARE -->
-<div id="software" class="tab-content">
-  <h2>Software</h2>
-  <p>Click below to download PaperMC:</p>
-  <button class="control-btn" onclick="window.open('https://papermc.io/downloads', '_blank')">Download PaperMC</button>
-</div>
-
-<!-- PLUGIN -->
-<div id="plugin" class="tab-content">
-  <h2>Plugins</h2>
-  <input type="file" id="pluginUpload" accept=".jar">
-  <button class="control-btn" onclick="uploadPlugin()">Upload Plugin</button>
-  <div id="pluginList"></div>
-</div>
-
-<!-- WORLD -->
-<div id="world" class="tab-content">
-  <h2>World</h2>
-  <div id="worldUpload">
-    <p id="worldMsg">Server is OFF. Please turn it ON to upload a world.</p>
-    <input type="file" id="worldFile" class="hidden">
-    <button id="uploadBtn" class="control-btn hidden">Upload World</button>
-  </div>
-</div>
-
-<!-- PLAYER -->
-<div id="player" class="tab-content">
-  <h2>Players</h2>
-  <div class="player-buttons">
-    <button class="blue-btn">✅ Whitelist</button>
-    <button class="blue-btn">👑 OPs</button>
-    <input type="text" id="opInput" placeholder="Enter username for OP">
-    <button class="blue-btn" onclick="addOp()">Add OP</button>
-    <button class="red-btn">🚫 Banned Players</button>
-    <div id="banList">No banned players.</div>
-    <button class="red-btn">🚫 Banned IPs</button>
+<div class="panel" id="mainPanel">
+  <div class="tabs">
+    <button onclick="showTab('control')" class="active">Control</button>
+    <button onclick="showTab('software')">Software</button>
+    <button onclick="showTab('plugin')">Plugin</button>
+    <button onclick="showTab('world')">World</button>
+    <button onclick="showTab('player')">Player</button>
   </div>
 
-  <h3 style="margin-top:20px;">Offline Players</h3>
-  <div class="offline-player">
-    <div><img src="https://mc-heads.net/avatar/Steve" alt=""> DEAD</div>
-    <div>➡️</div>
+  <div id="control" class="tab-content active">
+    <h3>Server Control</h3>
+    <button class="btn" onclick="alert('Starting server...')">Start</button>
+    <button class="btn" onclick="alert('Stopping server...')">Stop</button>
+    <button class="btn" onclick="alert('Restarting server...')">Restart</button>
+    <div class="server-status">Status: <strong>OFF</strong></div>
   </div>
-  <div class="offline-player">
-    <div><img src="https://mc-heads.net/avatar/Steve" alt=""> Kashish</div>
-    <div>➡️</div>
+
+  <div id="software" class="tab-content">
+    <h3>Software</h3>
+    <p>Click below to download PaperMC:</p>
+    <button class="btn" onclick="alert('Downloading PaperMC 1.21...')">Download PaperMC</button>
+  </div>
+
+  <div id="plugin" class="tab-content">
+    <h3>Plugins</h3>
+    <input type="file" id="pluginFile" accept=".jar" />
+    <button class="btn" onclick="uploadPlugin()">Upload Plugin</button>
+    <div id="pluginList">📁 plugins folder will appear here</div>
+  </div>
+
+  <div id="world" class="tab-content">
+    <h3>World</h3>
+    <div id="worldStatus">Server is OFF. Please turn it ON to upload a world.</div>
+    <input type="file" id="worldFile" webkitdirectory directory />
+    <button class="btn" onclick="uploadWorld()">Upload World</button>
+  </div>
+
+  <div id="player" class="tab-content">
+    <h3>Players</h3>
+    <div>
+      ✅ Whitelist &nbsp; 👑 OPs
+      <div class="op-section">
+        <input type="text" id="opUsername" placeholder="Enter username for OP" />
+        <button class="btn" onclick="addOP()">Add OP</button>
+        <div id="opList"></div>
+      </div>
+    </div>
+    <div class="ban-section">
+      🚫 Banned Players
+      <div id="banList">No banned players.</div>
+      🚫 Banned IPs
+    </div>
+    <div id="playerList">
+      <!-- Player heads removed, will be shown only if real data available -->
+    </div>
   </div>
 </div>
 
-  </div>
-</div><script>
-  let serverOn = false;
-  let ops = [];
-  let bannedPlayers = [];
-
-  function checkLogin() {
-    const user = document.getElementById('username').value;
-    const pass = document.getElementById('password').value;
-    if (user === 'Sarkar' && pass === 'Sarkar') {
-      document.getElementById('login').style.display = 'none';
-      document.getElementById('panel').style.display = 'flex';
+<script>
+  function login() {
+    const u = document.getElementById('username').value;
+    const p = document.getElementById('password').value;
+    if (u === 'Sarkar' && p === 'Sarkar') {
+      document.getElementById('loginBox').style.display = 'none';
+      document.getElementById('mainPanel').style.display = 'block';
     } else {
-      document.getElementById('loginError').innerText = "Invalid username or password.";
+      alert('Invalid credentials');
     }
   }
 
-  function showTab(tabId) {
-    document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active'));
-    document.getElementById(tabId).classList.add('active');
-    if (tabId === 'world') updateWorldTab();
-    if (tabId === 'player') updatePlayerTab();
-    if (tabId === 'plugin') fetchPlugins();
-  }
-
-  function setServerStatus(status) {
-    serverOn = (status === 'on');
-    document.getElementById('serverStatus').innerHTML = `<strong>Status:</strong> ${serverOn ? 'ON' : 'OFF'}`;
-    updateWorldTab();
-  }
-
-  function updateWorldTab() {
-    const msg = document.getElementById('worldMsg');
-    const file = document.getElementById('worldFile');
-    const btn = document.getElementById('uploadBtn');
-
-    if (serverOn) {
-      msg.innerText = "Upload your world file:";
-      file.classList.remove('hidden');
-      btn.classList.remove('hidden');
-    } else {
-      msg.innerText = "Server is OFF. Please turn it ON to upload a world.";
-      file.classList.add('hidden');
-      btn.classList.add('hidden');
-    }
-  }
-
-  function addOp() {
-    const input = document.getElementById('opInput');
-    const name = input.value.trim();
-    if (name && !ops.includes(name)) {
-      ops.push(name);
-      alert(`${name} is now OP!`);
-      input.value = "";
-    }
-  }
-
-  function updatePlayerTab() {
-    const banList = document.getElementById('banList');
-    banList.innerText = bannedPlayers.length > 0 ? bannedPlayers.join(", ") : "No banned players.";
+  function showTab(id) {
+    document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
+    document.querySelectorAll('.tabs button').forEach(btn => btn.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+    document.querySelector(`.tabs button[onclick="showTab('${id}')"]`).classList.add('active');
   }
 
   function uploadPlugin() {
-    const input = document.getElementById('pluginUpload');
-    const file = input.files[0];
-    if (!file) return alert("Please select a plugin .jar file");
-
-    const formData = new FormData();
-    formData.append('plugin', file);
-
-    fetch('/upload-plugin', {
-      method: 'POST',
-      body: formData
-    })
-    .then(res => res.json())
-    .then(data => {
-      if (data.success) {
-        alert("Plugin uploaded successfully.");
-        fetchPlugins();
-      } else {
-        alert("Failed to upload plugin.");
-      }
-    });
+    const file = document.getElementById('pluginFile').files[0];
+    if (!file || !file.name.endsWith('.jar')) {
+      alert('Please select a plugin jar file.');
+      return;
+    }
+    alert(`Plugin "${file.name}" uploaded (simulated).`);
+    const list = document.getElementById('pluginList');
+    list.innerHTML += `<div>🧩 ${file.name}</div>`;
   }
 
-  function fetchPlugins() {
-    fetch('/list-plugins')
-      .then(res => res.json())
-      .then(data => {
-        const container = document.getElementById('pluginList');
-        container.innerHTML = '';
-        data.plugins.forEach(p => {
-          const div = document.createElement('div');
-          div.className = 'plugin-file';
-          div.textContent = p;
-          container.appendChild(div);
-        });
-      });
+  function uploadWorld() {
+    const fileInput = document.getElementById('worldFile');
+    if (!fileInput.files.length) {
+      alert('Please select your world folder (non-ZIP)');
+      return;
+    }
+    alert('World folder uploaded (simulated).');
+    document.getElementById('worldStatus').innerText = 'World uploaded successfully.';
   }
-</script></body>
+
+  function addOP() {
+    const name = document.getElementById('opUsername').value.trim();
+    if (!name) return;
+    document.getElementById('opList').innerHTML += `<div>👑 ${name}</div>`;
+    document.getElementById('opUsername').value = '';
+  }
+</script>
+
+</body>
 </html>
