--- a/index.html
+++ b/index.html
@@ -1,189 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Minecraft Server Panel</title>
   <style>
-    body {
-      font-family: Arial;
-      background: #121212;
-      color: white;
-      margin: 0;
-      padding: 0;
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: sans-serif; }
+    body { background-color: #f4f4f4; }
+    #login { width: 100%; height: 100vh; display: flex; align-items: center; justify-content: center; }
+    .login-box {
+      background: white; padding: 30px; border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .login, .panel {
-      max-width: 400px;
-      margin: 100px auto;
-      padding: 30px;
-      background: #1e1e1e;
-      border-radius: 10px;
+    .login-box input, .login-box button {
+      width: 100%; padding: 10px; margin-top: 10px; border-radius: 4px;
     }
-    .login {
-      display: block; /* FIXED: show login first */
+    .login-box input { border: 1px solid #ccc; }
+    .login-box button {
+      background: #4caf50; color: white; border: none; cursor: pointer;
     }
-    .panel {
-      display: none;
-      max-width: 100%;
+    #loginError { color: red; text-align: center; }
+
+    #panel { display: none; height: 100vh; }
+    .sidebar {
+      width: 200px; background-color: #2d2d2d; color: white; padding-top: 20px;
     }
-    .login input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 5px;
+    .sidebar div {
+      padding: 15px 20px; cursor: pointer;
     }
-    .tabs {
-      display: flex;
-      background: #1e1e1e;
+    .sidebar div:hover { background-color: #444; }
+
+    .content {
+      flex-grow: 1; padding: 30px; background: #fff; overflow-y: auto; width: 100%;
     }
-    .tabs button {
-      flex: 1;
-      background: #2a2a2a;
-      border: none;
-      padding: 15px;
-      cursor: pointer;
-      color: white;
+    .tab-content { display: none; }
+    .tab-content.active { display: block; }
+
+    button.control-btn {
+      margin: 5px; padding: 10px 20px; border: none;
+      background: #4caf50; color: white; border-radius: 4px; cursor: pointer;
     }
-    .tabs button.active {
-      background: #3f3f3f;
-    }
-    .tab-content {
-      display: none;
-      padding: 20px;
-    }
-    .tab-content.active {
-      display: block;
-    }
-    .panel input[type="file"], .panel input[type="text"] {
-      margin: 10px 0;
-    }
-    .op-section, .ban-section {
+
+    input[type="file"] {
       margin-top: 10px;
     }
-    .btn {
-      background: #4caf50;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-left: 5px;
-    }
-    .server-status {
+
+    .upload-section {
       margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-<div class="login" id="loginBox">
-  <h2>Login Panel</h2>
-  <input type="text" id="username" placeholder="Username"/>
-  <input type="password" id="password" placeholder="Password"/>
-  <button onclick="login()" class="btn">Login</button>
+<!-- LOGIN PAGE -->
+<div id="login">
+  <div class="login-box">
+    <h2 style="text-align:center;">Login Panel</h2>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="checkLogin()">Login</button>
+    <p id="loginError"></p>
+  </div>
 </div>
 
-<div class="panel" id="mainPanel">
-  <div class="tabs">
-    <button onclick="showTab('control')" class="active">Control</button>
-    <button onclick="showTab('software')">Software</button>
-    <button onclick="showTab('plugin')">Plugin</button>
-    <button onclick="showTab('world')">World</button>
-    <button onclick="showTab('player')">Player</button>
+<!-- PANEL PAGE -->
+<div id="panel">
+  <div class="sidebar">
+    <div onclick="showTab('control')">Control</div>
+    <div onclick="showTab('software')">Software</div>
+    <div onclick="showTab('plugin')">Plugin</div>
+    <div onclick="showTab('world')">World</div>
+    <div onclick="showTab('player')">Player</div>
   </div>
-
-  <div id="control" class="tab-content active">
-    <h3>Server Control</h3>
-    <button class="btn" onclick="alert('Starting server...')">Start</button>
-    <button class="btn" onclick="alert('Stopping server...')">Stop</button>
-    <button class="btn" onclick="alert('Restarting server...')">Restart</button>
-    <div class="server-status">Status: <strong>OFF</strong></div>
-  </div>
-
-  <div id="software" class="tab-content">
-    <h3>Software</h3>
-    <p>Click below to download PaperMC:</p>
-    <button class="btn" onclick="alert('Downloading PaperMC 1.21...')">Download PaperMC</button>
-  </div>
-
-  <div id="plugin" class="tab-content">
-    <h3>Plugins</h3>
-    <input type="file" id="pluginFile" accept=".jar" />
-    <button class="btn" onclick="uploadPlugin()">Upload Plugin</button>
-    <div id="pluginList">📁 plugins folder will appear here</div>
-  </div>
-
-  <div id="world" class="tab-content">
-    <h3>World</h3>
-    <div id="worldStatus">Server is OFF. Please turn it ON to upload a world.</div>
-    <input type="file" id="worldFile" webkitdirectory directory />
-    <button class="btn" onclick="uploadWorld()">Upload World</button>
-  </div>
-
-  <div id="player" class="tab-content">
-    <h3>Players</h3>
-    <div>
-      ✅ Whitelist &nbsp; 👑 OPs
-      <div class="op-section">
-        <input type="text" id="opUsername" placeholder="Enter username for OP" />
-        <button class="btn" onclick="addOP()">Add OP</button>
-        <div id="opList"></div>
+  <div class="content">
+    <div id="control" class="tab-content">
+      <h2>Server Control</h2>
+      <button class="control-btn" onclick="startServer()">Start</button>
+      <button class="control-btn" onclick="stopServer()">Stop</button>
+      <button class="control-btn" onclick="restartServer()">Restart</button>
+      <p id="serverStatus">Status: OFF</p>
+    </div>
+    <div id="software" class="tab-content">
+      <h2>Software</h2>
+      <p>Click below to download PaperMC:</p>
+      <button class="control-btn" onclick="window.open('https://papermc.io/downloads', '_blank')">Download PaperMC</button>
+    </div>
+    <div id="plugin" class="tab-content">
+      <h2>Plugins</h2>
+      <div class="upload-section">
+        <input type="file" id="pluginUpload" accept=".jar">
+        <button class="control-btn" onclick="uploadPlugin()">Upload Plugin</button>
+        <p id="pluginMsg"></p>
+        <ul id="pluginList"></ul>
       </div>
     </div>
-    <div class="ban-section">
-      🚫 Banned Players
-      <div id="banList">No banned players.</div>
-      🚫 Banned IPs
+    <div id="world" class="tab-content">
+      <h2>World</h2>
+      <div id="worldUploadSection">
+        <input type="file" id="worldUpload" webkitdirectory directory>
+        <button class="control-btn" onclick="uploadWorld()">Upload World</button>
+        <p id="worldMsg"></p>
+      </div>
+    </div>
+    <div id="player" class="tab-content">
+      <h2>Players</h2>
+      <div>
+        <label>Enter username for OP:</label>
+        <input type="text" id="opUsername">
+        <button class="control-btn" onclick="addOp()">Add OP</button>
+        <ul id="opList"></ul>
+      </div>
+      <div>
+        <h3>Banned Players</h3>
+        <ul id="bannedList"></ul>
+      </div>
     </div>
   </div>
 </div>
 
 <script>
-  function login() {
-    const u = document.getElementById('username').value;
-    const p = document.getElementById('password').value;
-    if (u === 'Sarkar' && p === 'Sarkar') {
-      document.getElementById('loginBox').style.display = 'none';
-      document.getElementById('mainPanel').style.display = 'block';
+  function checkLogin() {
+    const user = document.getElementById('username').value;
+    const pass = document.getElementById('password').value;
+    if (user === 'Sarkar' && pass === 'Sarkar') {
+      document.getElementById('login').style.display = 'none';
+      document.getElementById('panel').style.display = 'flex';
+      showTab('control');
+      loadPlugins(); // Load plugins on login
     } else {
-      alert('Invalid credentials');
+      document.getElementById('loginError').innerText = "Invalid username or password.";
     }
   }
 
-  function showTab(id) {
-    document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
-    document.querySelectorAll('.tabs button').forEach(btn => btn.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-    document.querySelector(`.tabs button[onclick="showTab('${id}')"]`).classList.add('active');
+  function showTab(tabId) {
+    const tabs = document.querySelectorAll('.tab-content');
+    tabs.forEach(tab => tab.classList.remove('active'));
+    document.getElementById(tabId).classList.add('active');
+  }
+
+  function startServer() {
+    fetch('/start').then(() => {
+      document.getElementById('serverStatus').innerText = "Status: ON";
+    });
+  }
+
+  function stopServer() {
+    fetch('/stop').then(() => {
+      document.getElementById('serverStatus').innerText = "Status: OFF";
+    });
+  }
+
+  function restartServer() {
+    fetch('/restart').then(() => {
+      document.getElementById('serverStatus').innerText = "Status: RESTARTING...";
+      setTimeout(() => {
+        document.getElementById('serverStatus').innerText = "Status: ON";
+      }, 3000);
+    });
   }
 
   function uploadPlugin() {
-    const file = document.getElementById('pluginFile').files[0];
+    const fileInput = document.getElementById('pluginUpload');
+    const file = fileInput.files[0];
     if (!file || !file.name.endsWith('.jar')) {
-      alert('Please select a plugin jar file.');
+      document.getElementById('pluginMsg').innerText = "Please select a plugin .jar file.";
       return;
     }
-    alert(`Plugin "${file.name}" uploaded (simulated).`);
-    const list = document.getElementById('pluginList');
-    list.innerHTML += `<div>🧩 ${file.name}</div>`;
+
+    const formData = new FormData();
+    formData.append('plugin', file);
+
+    fetch('/upload-plugin', {
+      method: 'POST',
+      body: formData
+    })
+    .then(res => res.text())
+    .then(msg => {
+      document.getElementById('pluginMsg').innerText = msg;
+      fileInput.value = '';
+      loadPlugins();
+    });
+  }
+
+  function loadPlugins() {
+    fetch('/plugins')
+      .then(res => res.json())
+      .then(plugins => {
+        const list = document.getElementById('pluginList');
+        list.innerHTML = '';
+        plugins.forEach(p => {
+          const li = document.createElement('li');
+          li.innerText = p;
+          list.appendChild(li);
+        });
+      });
   }
 
   function uploadWorld() {
-    const fileInput = document.getElementById('worldFile');
-    if (!fileInput.files.length) {
-      alert('Please select your world folder (non-ZIP)');
+    const input = document.getElementById('worldUpload');
+    const files = input.files;
+    if (!files.length) {
+      document.getElementById('worldMsg').innerText = "Please select a world folder.";
       return;
     }
-    alert('World folder uploaded (simulated).');
-    document.getElementById('worldStatus').innerText = 'World uploaded successfully.';
+
+    const formData = new FormData();
+    for (const file of files) {
+      formData.append('world', file, file.webkitRelativePath);
+    }
+
+    fetch('/upload-world', {
+      method: 'POST',
+      body: formData
+    })
+    .then(res => res.text())
+    .then(msg => {
+      document.getElementById('worldMsg').innerText = msg;
+    });
   }
 
-  function addOP() {
-    const name = document.getElementById('opUsername').value.trim();
-    if (!name) return;
-    document.getElementById('opList').innerHTML += `<div>👑 ${name}</div>`;
-    document.getElementById('opUsername').value = '';
+  function addOp() {
+    const username = document.getElementById('opUsername').value;
+    if (!username) return;
+
+    fetch('/add-op', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ username })
+    })
+    .then(() => {
+      const list = document.getElementById('opList');
+      const li = document.createElement('li');
+      li.innerText = username;
+      list.appendChild(li);
+    });
   }
 </script>
 
